# rustbankapi

./: Cargo.toml
src/: lib.rs  main.rs
src/account/: mod.rs
src/domain/: account.rs  mod.rs  money.rs
src/money/: mod.rs
src/routes/: transfers.rs
tests/: common.rs  integration_test.rs  transfer_test.rs
