[package]
name = "moneytransfer"
version = "0.1.0"
authors = ["Jakub Zimny <zimny.jot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
rocket = "0.4.2"
rocket_contrib = {version = "0.4.2", features = ["json", "uuid"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"